# trainable-entity-extractor

./: .gitignore  Makefile  README.md  dev-requirements.txt  justfile  old_setup.py  pyproject.toml  requirements.txt  setup.py  test_debug.py
.github/workflows/: test.yml
.old_github/workflows/: test.yml
performance_results/: segment_selector.md
src/: performance_pdf_to_multi_option_report.py  performance_segment_selector.py  text_to_multi_option_benchmark.py
src/multilingual_paragraph_extractor/: MultilingualParagraphExtractor.py
src/multilingual_paragraph_extractor/domain/: AlignmentScore.py  MultilingualParagraph.py  ParagraphFeatures.py  ParagraphMatchScore.py  ParagraphsFromLanguage.py  SegmentsFromLanguage.py
src/multilingual_paragraph_extractor/driver/: AlignmentResult.py  Labels.py  Mistake.py  alignment_benchmark.py  create_pdf_data_from_deepdoc.py  create_pdf_data_from_docling.py  create_pdf_data_from_marker.py  create_pdf_data_from_pymupdf.py  different_pdf_score.py  fix_mistakes_llm.py  label_data.py  run_alignment.py  visualize_alignments.py  visualize_match_scores.py
src/multilingual_paragraph_extractor/tests/: test_align_paragraphs.py  test_are_same_paragraph.py  test_merge_paragraphs.py  test_merge_paragraphs_advanced.py  test_merge_paragraphs_basic.py  test_merge_paragraphs_spanning_two_pages.py  test_merge_segments_spanning_two_pages.py  test_paragraph_features.py  test_paragraph_match_score.py  test_remove_headers_footers.py  test_remove_undesired_segments_types.py
src/multilingual_paragraph_extractor/use_cases/: MultilingualParagraphAlignerUseCase.py
src/scripts/: cache_pdf_data.py  check_performance.py  paragraph_selector_benchmark.py  pdf_multi_option_classification_benchmark.py
src/test/: test_extractor_pdf_to_multi_option.py  test_extractor_text_to_multi_option.py  test_extractor_text_to_text.py  test_remove_models.py  test_xml_file.py
src/tests/multilingual_paragraph_extractor/: test_align_paragraphs.py  test_merge_segments_spanning_two_pages.py  test_paragraph_features.py  test_paragraph_match_score.py  test_remove_undesired_segments_types.py
src/tests/trainable_entity_extractor/: test_extractor_pdf_to_multi_option.py  test_extractor_pdf_to_text.py  test_extractor_text_to_multi_option.py  test_filter_xml_pages.py  test_pdf_segments.py  test_xml_file.py
src/trainable_entity_extractor/: FilterValidSegmentsPages.py  TrainableEntityExtractor.py  XmlFile.py  config.py  send_logs.py
src/trainable_entity_extractor/adapters/: ExtractorLogger.py  LocalExtractionDataRetriever.py  LocalJobExecutor.py  LocalJobRunner.py  LocalModelStorage.py
src/trainable_entity_extractor/data/: ExtractionData.py  ExtractionIdentifier.py  ExtractionTask.py  LabeledData.py  Options.py  Params.py  PdfData.py  PdfDataSegment.py  PredictionData.py  PredictionSample.py  ResultsMessage.py  SegmentBox.py  SegmentationData.py  Suggestion.py  TrainingSample.py
src/trainable_entity_extractor/domain/: DistributedJob.py  DistributedPerformance.py  DistributedSubJob.py  ExtractionData.py  ExtractionDataSummary.py  ExtractionDistributedTask.py  ExtractionIdentifier.py  ExtractionStatus.py  FormatSegmentText.py  JobPerformance.py  JobProcessingResult.py  JobStatus.py  JobType.py  LabeledData.py  LogSeverity.py  Option.py  PdfData.py  PdfDataSegment.py  Performance.py  PerformanceLog.py  PerformanceSummary.py  PredictionData.py  PredictionSample.py  PredictionSamples.py  PredictionSamplesData.py  SegmentBox.py  SegmentationData.py  Suggestion.py  TrainableEntityExtractorJob.py  TrainingSample.py  Value.py  XmlFile.py
src/trainable_entity_extractor/drivers/: check_performance.py  (+8 more)
(+652 files in other folders)
