[project]
name = "trainable-entity-extractor"
version = "2024.11.19.1"
description = "This tool is a trainable text/PDF to entity extractor"
license = { file = "LICENSE" }
authors = [{ name = "HURIDOCS" }]
requires-python = ">= 3.10"
dependencies = [
    "pdf-document-layout-analysis @ git+https://github.com/huridocs/pdf-document-layout-analysis@a490e280aa168e12c0211d4f03a5264168512ba4",
    "python-Levenshtein==0.25.1",
    "tdda==2.0.9",
    "datasets==2.19.0",
    "evaluate==0.4.1",
    "pandas==2.2.2",
    "dateparser==1.2.0",
    "langcodes==3.4.0",
    "nltk==3.8.1",
    "sentencepiece==0.2.0",
    "accelerate==0.29.3",
    "fasttext-wheel==0.9.2",
    "rich==13.7.1",
    "joblib==1.4.0",
    "tqdm==4.66.3",
    "rapidfuzz==3.8.1",
    "setfit==1.0.3",
    "fuzzywuzzy==0.18.0",
    "pydantic==2.8.2",
    "scikit-learn==1.5.1",
    "numpy==1.26.4",
    "lightgbm==4.5.0",
    "torch==2.4.0",
    "transformers==4.40.2",
    "gliner==0.2.13",
    "huggingface-hub==0.23.5",
    "typer==0.12.3",
    "sentence-transformers==3.0.1",
    "py-markdown-table==1.1.0",
    "flair==0.14.0",
    "graypy==2.1.0"
]